2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b187

	* Fix: Missing paren in init.php

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b186

	* Fix: Badly renamed button in resize_photo

	* Change:  Make register_globals a "Serious Warning!"/"Continue at own risk..." in
	  the config wizard.

	* Change:  Internally "disable" register_globals in init.php by calling unset() on
	  each $$key from $_REQUEST.  The idea is that this will be a workaround for
	  Geeklog embedding, but it will still give us the extra security we need.

	* Fix: Correct the 'Warning' code in check.inc to behave like the failure code,
	  and remove the 'nocolor' flag, which was unnecessary.

2004-09-11  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b185

	* New: Added images/favicon.ico as favicon. Inserted via common_header()

	* Change: Little html output beautify in albums.php and view_album.php

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b184

	* Fix: poll_properties and reset_votes

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b183

	* Fix: Set Nested Properties

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b182

	* Fix: Last second bug.  You can't empty() a function call.

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b181

	* Fix: gallery_remote2 now works with GR, fix a lot of small PHP issues
	  (unquoted array refs, etc.)

	* Fix: Get rid of the ugly foreach loop and just make save_photos use $_FILES
	  directly

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b180

	* Fix: variable typo in resize_photo

	* Fix: Don't try to use header() when debugging, because we've already sent text
	  (captionator)

2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b179

	* Fix: Caption options in upload via form was ignored.
	       Fixed with de-globalize setCaption in save_photos.php

2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b178
