@@ -1,3 +1,14 @@
+2004-09-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b188
+
+	* Add: Add support for 'Coral', a peer-to-peer webcache to init.php
+	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=94428#94428
+
+	* Change:  Correct several uses of preg* to ereg, to stick with the G1 standard
+
+	* Fix: Inline comment posting in view_photo
+
+	* Change: A bit of whitespace fixing
+
 2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b187
 
 	* Fix: Missing paren in init.php
